2007-08-12  Benjamin Berg  <benjamin@sipsolutions.net>

	* MAINTAINERS:
	Update MAINTAINERS file to follow the new standard.

2007-08-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix at the progressbar and made treeview_items smaller

2007-08-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Get rid of few bugs.

2007-08-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Apple color sucks :D New one

2007-08-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Using yellow tooltip with Apple's yellow tooltip color (just a try)

2007-08-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Removed that *shit* gold tooltip color, using a
	"salmon color"

2007-08-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	It is gtk-tooltip not gtk-tooltips.

2007-08-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Reworked the Clearlooks gtkrc to be--in my opinion--cleaner.

2007-07-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_menuitem):
	Fixed a bug in Glossy's menuitems that appears as Gummy's ones

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Removed useless style declaration

2007-07-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_slider):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fixed the menubar bug

2007-07-31  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.11.4 release.

2007-07-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Hue to 213 instead 211

2007-07-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	New ColorScheme

2007-07-29  Andrea Cimitan  <andrea.cimitan@gmail.com>
