@@ -1,1 +1,1 @@
-For all authors of a given engine pleae see engines/<Engine>/AUTHORS
+For all authors of a given engine please see engines/<Engine>/AUTHORS
