@@ -1,6 +1,6 @@
-Clearlooks development team:
-
-  Richard Stellingwerff - remenic@gmail.com
-  Daniel Borgmann       - daniel.borgmann@gmail.com
+Richard Stellingwerff <remenic@gmail.com>
+Daniel Borgmann <daniel.borgmann@gmail.com>
+Benjamin Berg <benjamin@sipsolutions.net>
+Andrea Cimitan <andrea.cimitan@gmail.com>
 
 See CREDITS file for list of contributors.
